<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:text="@string/titulo" />

        <EditText
            android:id="@+id/txtPotencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/potencia"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtTorque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/torque"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cilindradas"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/chkAspiracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aspiracao" />

        <CheckBox
            android:id="@+id/chkTransmissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambio" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtTunar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tunar" />

        <ImageButton
            android:id="@+id/bntTunar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tunar"
            android:onClick="EnviarStageum"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tunar2" />

        <ImageButton
            android:id="@+id/bntTunar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tunar"
            android:onClick="EnviarStagedois"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tunar3" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tunar3"
            android:onClick="EnviarDadosemail"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tunar4" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tunar4"
            android:onClick="Ligarempresa"
            app:srcCompat="@android:drawable/ic_menu_call" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>