<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadcarroActivity">

    <TextView
        android:id="@+id/txtTitulocad"
        android:layout_width="107dp"
        android:layout_height="18dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="30"
        android:text="@string/titulocad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="58dp"
        android:hint="@string/marca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="144dp"
        android:hint="@string/versao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtStagecad"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="184dp"
        android:hint="@string/stage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtModelo"
        android:layout_width="158dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="100dp"
        android:hint="@string/modelo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadcarro"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="28dp"
        android:onClick="Inserircarro"
        android:text="@string/cadcarro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStagecad" />
</androidx.constraintlayout.widget.ConstraintLayout>